--- a/src/gui/gui_static/templates/bare.html
+++ b/src/gui/gui_static/templates/bare.html
@@ -34,6 +34,7 @@
     <script src="/js/jquery.tagsinput.js"></script>
     <script src="/js/jquery.placeholder.js"></script>
     <script src="/js/jquery.stacktable.js"></script>
+    <script src="/js/application.js"></script>
 
     <!-- n2o scripts -->
     <!--script src='/n2o/jquery.js' type='text/javascript' charset='utf-8'></script-->
@@ -41,7 +42,8 @@
     <script src='/n2o/n2o.js' type='text/javascript' charset='utf-8'></script>
     <script src='/n2o/bert.js' type='text/javascript' charset='utf-8'></script>
 
-    <!-- Custom file upload script based on Nitrogen's -->
-    <script src='/js/veil_upload.js' type='text/javascript' charset='utf-8'></script>
+    <!-- page dependent scripts -->
+    {{custom}}
+
 </body>
 </html>
