VFS-855, move static files to ctool

--- a/src/gui/gui_static/templates/bare.html
+++ b/src/gui/gui_static/templates/bare.html
@@ -6,11 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- Bootstrap -->
-    <link rel="stylesheet"  href="/css/bootstrap.css" type="text/css" media="screen" charset="utf-8" />
-    <link rel="stylesheet"  href="/css/bootstrap-responsive.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet"  href="/flatui/bootstrap.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet"  href="/flatui/bootstrap-responsive.css" type="text/css" media="screen" charset="utf-8" />
 
     <!-- Flat UI -->
-    <link rel="stylesheet" href="/css/flat-ui.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/flatui/flat-ui.css" type="text/css" media="screen" charset="utf-8" />
 
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8" />
 
@@ -23,21 +23,20 @@
     <script>{{script}}</script>
 
     <!-- bootstrap / flat-ui scripts -->
-    <script src="/js/jquery-1.8.3.min.js"></script>
-    <script src="/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="/js/jquery.ui.touch-punch.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/bootstrap-select.js"></script>
-    <script src="/js/bootstrap-switch.js"></script>
-    <script src="/js/flatui-checkbox.js"></script>
-    <script src="/js/flatui-radio.js"></script>
-    <script src="/js/jquery.tagsinput.js"></script>
-    <script src="/js/jquery.placeholder.js"></script>
-    <script src="/js/jquery.stacktable.js"></script>
-    <script src="/js/application.js"></script>
+    <script src="/flatui/jquery-1.8.3.min.js"></script>
+    <script src="/flatui/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="/flatui/jquery.ui.touch-punch.min.js"></script>
+    <script src="/flatui/bootstrap.min.js"></script>
+    <script src="/flatui/bootstrap-select.js"></script>
+    <script src="/flatui/bootstrap-switch.js"></script>
+    <script src="/flatui/flatui-checkbox.js"></script>
+    <script src="/flatui/flatui-radio.js"></script>
+    <script src="/flatui/jquery.tagsinput.js"></script>
+    <script src="/flatui/jquery.placeholder.js"></script>
+    <script src="/flatui/jquery.stacktable.js"></script>
+    <script src="/flatui/application.js"></script>
 
     <!-- n2o scripts -->
-    <!--script src='/n2o/jquery.js' type='text/javascript' charset='utf-8'></script-->
     <script src='/n2o/bullet.js' type='text/javascript' charset='utf-8'></script>
     <script src='/n2o/n2o.js' type='text/javascript' charset='utf-8'></script>
     <script src='/n2o/bert.js' type='text/javascript' charset='utf-8'></script>
