VFS-870, remove logotype footers from most pages

--- a/src/gui/gui_static/templates/bare.html
+++ b/src/gui/gui_static/templates/bare.html
@@ -12,6 +12,9 @@
     <!-- Flat UI -->
     <link rel="stylesheet" href="/flatui/flat-ui.css" type="text/css" media="screen" charset="utf-8" />
 
+    <!-- Icomoon icons -->
+    <link rel="stylesheet" href="/flatui/icomoon-font.css" type="text/css" media="screen" charset="utf-8" />
+
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8" />
 
     <!-- link rel="shortcut icon" href="" -->
