--- a/src/gui/gui_static/templates/bare.html
+++ b/src/gui/gui_static/templates/bare.html
@@ -26,18 +26,19 @@
     <script>{{script}}</script>
 
     <!-- bootstrap / flat-ui scripts -->
-    <script src="/flatui/jquery-1.8.3.min.js"></script>
-    <script src="/flatui/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="/flatui/jquery.ui.touch-punch.min.js"></script>
-    <script src="/flatui/bootstrap.min.js"></script>
-    <script src="/flatui/bootstrap-select.js"></script>
-    <script src="/flatui/bootstrap-switch.js"></script>
-    <script src="/flatui/flatui-checkbox.js"></script>
-    <script src="/flatui/flatui-radio.js"></script>
-    <script src="/flatui/jquery.tagsinput.js"></script>
-    <script src="/flatui/jquery.placeholder.js"></script>
-    <script src="/flatui/jquery.stacktable.js"></script>
-    <script src="/flatui/application.js"></script>
+    <script src="/flatui/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/jquery.ui.touch-punch.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/bootstrap-select.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/bootstrap-switch.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/flatui-checkbox.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/flatui-radio.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/jquery.tagsinput.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/jquery.placeholder.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/jquery.stacktable.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/flatui/application.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- n2o scripts -->
     <script src='/n2o/bullet.js' type='text/javascript' charset='utf-8'></script>
