--- a/src/gui/gui_static/css/style.css
+++ b/src/gui/gui_static/css/style.css
@@ -1,14 +1,8 @@
 .page-container
 {
-	padding: 60px 20px 20px 20px;
-	overflow: hidden;
-}
-
-.floating-menu
-{
-	position: fixed;
-	width: 200px;
-	float: left;
+    min-width: 1024px;
+    position: relative;
+    overflow: hidden;
 }
 
 .page-content
@@ -26,11 +20,6 @@
 	margin: 0 !important;
 }
 
-.indent-10
-{
-	margin-left: 10px;
-}
-
 .login-page
 {
 	width: 520px;
@@ -45,51 +34,6 @@
 {
 	margin-top: 12px;
 	margin-bottom: 20px;
-}
-
-.search-bar
-{
-	width: 250px;
-}
-
-
-.table-cell
-{
-	display: table-cell;
-  	vertical-align: middle !important;
-}
-
-.list-icon
-{
-	vertical-align: middle !important;
-	margin-right: 5px;
-	height: 32px;
-}
-
-.breadcrumb-background
-{
-	border-radius: 6px 6px 6px 6px;
-	border: 2px solid rgb(189, 195, 199);
-	background-color: white;
-	margin-right: 325px;
-	position:relative;
-	margin-bottom: 0;
-}
-
-.breadcrumb-content
-{
-	font-size: 16px !important;
-	margin: 0 !important;
-	min-height: 21px;
-	max-height: 21px;
-	overflow-y: scroll;
-	line-height: 21px;
-	padding: 8px 12px 8px 5px;
-}
-
-.selected-item
-{
-	background-color: rgba(26, 188, 156, 0.2);
 }
 
 a.glyph-link
