--- a/src/gui/gui_static/templates/bare.html
+++ b/src/gui/gui_static/templates/bare.html
@@ -13,10 +13,13 @@
     <link rel="stylesheet" href="/flatui/flat-ui.css" type="text/css" media="screen" charset="utf-8" />
 
     <!-- Icomoon icons -->
-    <link rel="stylesheet" href="/flatui/icomoon-font.css" type="text/css" media="screen" charset="utf-8" />
-
-    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8" />
-
+    <link rel="stylesheet" href="/common/icomoon-font.css" type="text/css" media="screen" charset="utf-8"/>
+    <!-- Lato font -->
+    <link rel="stylesheet" href="/common/lato-font.css" type="text/css" media="screen" charset="utf-8"/>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8"/>
+    <!-- page specific CSS -->
+    {{css}}
     <!-- link rel="shortcut icon" href="" -->
 </head>
 <body>
@@ -26,24 +29,27 @@
     <script>{{script}}</script>
 
     <!-- bootstrap / flat-ui scripts -->
-    <script src="/flatui/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/jquery.ui.touch-punch.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/bootstrap-select.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/bootstrap-switch.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/bootbox.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/flatui-checkbox.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/flatui-radio.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/jquery.tagsinput.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/jquery.placeholder.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/jquery.stacktable.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/flatui/application.js" type="text/javascript" charset="utf-8"></script>
+    <script src='/flatui/jquery-1.8.3.min.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/jquery-ui-1.10.3.custom.min.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/jquery.ui.touch-punch.min.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/bootstrap.min.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/bootstrap-select.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/bootstrap-switch.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/bootbox.min.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/flatui-checkbox.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/flatui-radio.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/jquery.tagsinput.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/jquery.placeholder.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/jquery.stacktable.js' type='text/javascript' charset='utf-8'></script>
+    <script src='/flatui/application.js' type='text/javascript' charset='utf-8'></script>
 
     <!-- n2o scripts -->
     <script src='/n2o/bullet.js' type='text/javascript' charset='utf-8'></script>
     <script src='/n2o/n2o.js' type='text/javascript' charset='utf-8'></script>
     <script src='/n2o/bert.js' type='text/javascript' charset='utf-8'></script>
+
+    <!-- application specific scripts -->
+    <script src='/common/application.js' type='text/javascript' charset='utf-8'></script>
 
     <!-- page dependent scripts -->
     {{custom}}
