VFS-1636: Stub of ember-simple-auth integration

--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -1,3 +1,9 @@
+{{#if session.isAuthenticated}}
+  <a>AUTH!</a>
+{{else}}
+  <a>NOT AUTH!</a>
+{{/if}}
+
 {{#each menuItems as |item|}}
   {{main-menu-item linkTo=item.linkTo titleI18n=item.titleI18n}}
 {{/each}}
