--- a/src/http/gui/app/templates/login.hbs
+++ b/src/http/gui/app/templates/login.hbs
@@ -1,3 +1,5 @@
+<a {{action 'authenticate'}}><h1>Authenticate</h1></a>
+
 <div class="container login-box-container">
   <div class="row row-centered">
     <div class="col-xs-9 col-centered login-box">
