VFS-1636: Show/hide some menu items when logged in

--- a/src/http/gui/app/templates/components/main-menu.hbs
+++ b/src/http/gui/app/templates/components/main-menu.hbs
@@ -1,9 +1,11 @@
-{{#if session.isAuthenticated}}
-  <a>AUTH!</a>
-{{else}}
-  <a>NOT AUTH!</a>
-{{/if}}
-
 {{#each menuItems as |item|}}
-  {{main-menu-item linkTo=item.linkTo titleI18n=item.titleI18n}}
+  {{#if session.isAuthenticated}}
+    {{#if item.showAuthenticated}}
+      {{main-menu-item linkTo=item.linkTo titleI18n=item.titleI18n}}
+    {{/if}}
+  {{else}}
+    {{#if item.showUnauthenticated}}
+      {{main-menu-item linkTo=item.linkTo titleI18n=item.titleI18n}}
+    {{/if}}
+  {{/if}}
 {{/each}}
