VFS-1636: A better place for temporary username

--- a/src/http/gui/app/templates/components/top-bar.hbs
+++ b/src/http/gui/app/templates/components/top-bar.hbs
@@ -11,7 +11,7 @@
     {{main-menu}}
   </div><!--/.nav-collapse -->
   {{!-- TODO --}}
-  <div class="username" style="float: left;">
+  <div class="username">
     {{userName}}
   </div>
 </div>
