--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -60,6 +60,13 @@ img {
   text-align: right;
 }
 
+.username {
+  position: absolute;
+  top: 70px;
+  left: 10px;
+
+}
+
 html {
   background: url('/assets/images/main-background.png') no-repeat center center fixed;
   -webkit-background-size: cover;
