--- a/src/http/gui/app/styles/main-menu.scss
+++ b/src/http/gui/app/styles/main-menu.scss
@@ -111,7 +111,20 @@
         &:hover, &:focus, &.active {
           color: #fff;
           background: none;
-          border-bottom: 3px solid $color-red-1;
+          // the bottom red line is rendered with "after"
+          // border-bottom: 3px solid $color-red-1;
+
+          // the bottom red line - is "after" because we need to cover a menu line
+          &::after {
+            color: transparent;
+            content: '.';
+            display: block;
+            border-bottom: 3px $color-red-1 solid;
+            padding: 0;
+            margin-left: -15px;
+            margin-right: -15px;
+            padding-top: 1px;
+          }
         }
       }
     }
