--- a/src/http/gui/app/templates/components/top-bar.hbs
+++ b/src/http/gui/app/templates/components/top-bar.hbs
@@ -3,12 +3,15 @@
     {{#link-to 'index' class="navbar-brand"}}
       <img src="/assets/images/logo.svg" alt="onedata" />
     {{/link-to}}
-    {{navbar-toggle}}
+    {{!-- A navbar toogle, which is visible only when menu is collapsed --}}
+    {{navbar-toggle enableCloseMenuButton=false}}
     {{!-- TODO: logo color is too saturized --}}
-
   </div>
   <div id="navbar" class="collapse navbar-collapse">
     {{main-menu}}
+    {{!-- A navbar toggle, which is visible only when menu is toggled (uncollapsed) --}}
+    {{!-- Using this, because the button should be "glued" to toggled menu --}}
+    {{navbar-toggle enableOpenMenuButton=false topRight=true}}
   </div><!--/.nav-collapse -->
   {{!-- TODO --}}
   <div class="username">
