--- a/src/http/gui/app/templates/components/owl-carousel.hbs
+++ b/src/http/gui/app/templates/components/owl-carousel.hbs
@@ -1,10 +1,9 @@
-{{!-- <div class="owl-carousel-wrapper"> --}}
 <div class="row">
   <div class="col-xs-1 align-right">
-    <div class="owl-carousel-arrows vcenter">
-			<button class="btn btn-primary prev">
+    <div class="owl-carousel-arrows">
+			<a class="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      </button>
+      </a>
 		</div>
   </div>
 
@@ -18,14 +17,10 @@
   </div>
 
   <div class="col-xs-1 align-left">
-    <div class="owl-carousel-arrows vcenter">
-			<button class="btn btn-primary next">
+    <div class="owl-carousel-arrows">
+			<a class="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      </button>
+      </a>
 		</div>
   </div>
 </div>
-
-
-
-{{!-- </div> --}}
