VFS-1672: New routes and draft of onezone layout

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -31,8 +31,7 @@ $body-font: 'Open Sans';
 @import "main-menu";
 @import "index";
 @import "login";
-
-
+@import "onezone";
 
 html, body {
   font-family: $body-font !important;
