--- a/src/http/gui/app/templates/application.hbs
+++ b/src/http/gui/app/templates/application.hbs
@@ -1,7 +1,4 @@
-<div class="global-fog"></div>
+{{outlet}}
 
-{{top-bar}}
-
-<div class="container-application">
-  {{outlet}}
-</div>
+{{!-- pagecompontent yields a space for page, where we will put an outlet --}}
+{{!-- we have two main routes: homepage and onezone, all internal routes have resetted namespace --}}
