--- a/src/http/gui/app/templates/components/onezone-top-bar.hbs
+++ b/src/http/gui/app/templates/components/onezone-top-bar.hbs
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 title"><h1>{{t 'onezone.topBar.manageProviders'}}</h1></div>
-    <div class="col-md-6 hints"><span class="pull-right">[ ] {{t 'onezone.topBar.enableHints'}}</span></div>
+    <div class="col-md-6 hidden-sm hidden-xs hints"><span class="pull-right">[ ] {{t 'onezone.topBar.enableHints'}}</span></div>
   </div>
   {{!-- TODO --}}
   <div class="username">
