--- a/src/http/gui/app/templates/login.hbs
+++ b/src/http/gui/app/templates/login.hbs
@@ -6,22 +6,22 @@
       <div class="container-fluid login-buttons-container">
         <div class="row row-centered">
           <div class="col-xs-2 col-centered">
-            <div {{action 'authenticate'}} class="login-icon-box github">
+            <div {{action 'authenticate' 'github'}} class="login-icon-box github">
             </div>
           </div>
-          <div {{action 'authenticate'}} class="col-xs-2 col-centered">
+          <div {{action 'authenticate' 'twitter'}} class="col-xs-2 col-centered">
             <div class="login-icon-box twitter">
             </div>
           </div>
-          <div {{action 'authenticate'}} class="col-xs-2 col-centered">
+          <div {{action 'authenticate' 'google'}} class="col-xs-2 col-centered">
             <div class="login-icon-box google">
             </div>
           </div>
-          <div {{action 'authenticate'}} class="col-xs-2 col-centered">
+          <div {{action 'authenticate' 'dropbox'}} class="col-xs-2 col-centered">
             <div class="login-icon-box dropbox">
             </div>
           </div>
-          <div {{action 'authenticate'}} class="col-xs-2 col-centered">
+          <div {{action 'authenticate' 'facebook'}} class="col-xs-2 col-centered">
             <div class="login-icon-box facebook">
             </div>
           </div>
