VFS-1638 allow logging in with openid providers

--- a/src/http/gui/app/templates/login.hbs
+++ b/src/http/gui/app/templates/login.hbs
@@ -9,7 +9,7 @@
             <div {{action 'authenticate' 'github'}} class="login-icon-box github">
             </div>
           </div>
-          <div {{action 'authenticate' 'twitter'}} class="col-xs-2 col-centered">
+          <div {{action 'authenticate' 'plgrid'}} class="col-xs-2 col-centered">
             <div class="login-icon-box twitter">
             </div>
           </div>
