VFS-1672: Fake providers and spaces models
* Using LocalStorage adapter.
* Authentication is dummy - click on one of login providers.

--- a/src/http/gui/app/templates/components/account-add.hbs
+++ b/src/http/gui/app/templates/components/account-add.hbs
@@ -2,5 +2,5 @@
   {{one-icon iconName='oneicon-checkbox-check' colorClass='red-1'}}
 </div>
 <div class="account-label">
-  {{label}}
+  {{t 'components.account'}}
 </div>
