--- a/src/http/gui/app/templates/components/onezone-sidebar.hbs
+++ b/src/http/gui/app/templates/components/onezone-sidebar.hbs
@@ -30,7 +30,18 @@
       </div>
       <div id="collapse-spaces" class="accordion-body collapse">
         <div class="accordion-inner">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          {{#each spaces as |s|}}
+            <ul>
+              <li>
+                {{s.name}}
+                <ul>
+                  {{#each s.providers as |p|}}
+                    <li>{{p.name}}</li>
+                  {{/each}}
+                </ul>
+              </li>
+            </ul>
+          {{/each}}
         </div>
       </div>
     </div>
@@ -43,7 +54,18 @@
       </div>
       <div id="collapse-files" class="accordion-body collapse">
         <div class="accordion-inner">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          {{#each providers as |p|}}
+            <ul>
+              <li>
+                {{p.name}}
+                <ul>
+                  {{#each p.spaces as |s|}}
+                    <li>{{s.name}}</li>
+                  {{/each}}
+                </ul>
+              </li>
+            </ul>
+          {{/each}}
         </div>
       </div>
     </div>
