--- a/src/http/gui/app/templates/onezone.hbs
+++ b/src/http/gui/app/templates/onezone.hbs
@@ -1,6 +1,7 @@
 <div class="onezone-fog"></div>
 
-{{onezone-sidebar tagName='nav' class='onezone-sidebar'}}
+{{onezone-sidebar tagName='nav' class='onezone-sidebar'
+  providers=model.providers spaces=model.spaces}}
 {{onezone-top-bar tagName='header' class='onezone-top-bar'}}
 
 <div class="onezone-container-application">
