VFS-1672: Some work on manage data spaces accordion

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -33,6 +33,7 @@ $body-font-size: 14pt;
 $title-font: 'Myriad Pro Semibold';
 $body-font: 'Open Sans';
 
+@import "oneicons";
 @import "colors";
 @import "fonts";
 @import "owl-carousel";
